tdf#125363, tdf#123095 - Use CaseTransliteration for autofilter

Change-Id: Ib6f1edebe26a69d3316a901e00d2bc6e0c66695f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141047
Tested-by: Jenkins
Reviewed-by: Eike Rathke <erack@redhat.com>